--- a/templates/empleo.html
+++ b/templates/empleo.html
@@ -20,7 +20,7 @@
 			<a href="">Contacto <i class="fa fa-envelope"></i></a>
 		</div>
 	</nav>
-	<div class="home" id="home">
+	<div class="home home-empleo" id="home">
 		
 	</div>
 	<!--Contenido-->
